<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.altba.logisticaaltba.EntregarPedidosAct"
        android:background="@drawable/background_altba1_jpeg">

    <com.budiyev.android.codescanner.CodeScannerView
            android:layout_width="match_parent" android:layout_height="400sp" android:id="@+id/scanner_view"
            app:autoFocusButtonColor="@color/white" app:autoFocusButtonVisible="true"
            app:flashButtonColor="@color/white" app:flashButtonVisible="true"
            app:frameColor="@color/white" app:frameCornersSize="50dp" app:frameCornersRadius="0dp"
            app:frameAspectRatioHeight="1" app:frameAspectRatioWidth="1" app:frameSize="0.75" app:frameThickness="2dp"
            app:maskColor="#4D000000"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_below="@id/scanner_view">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <TextView
                    android:text="@string/scan" android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:textSize="18sp"
                    android:id="@+id/scannerTextView" android:textColor="@color/blackVariant"
                    android:layout_marginTop="20dp" android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp" android:layout_marginBottom="10dp"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/nombre" android:id="@+id/txtClientName"
                      android:textColor="@color/blackVariant" android:layout_marginBottom="10dp"
                      android:layout_marginStart="15dp" android:textSize="16sp"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/producto" android:id="@+id/txtProducto"
                      android:textColor="@color/blackVariant" android:layout_marginBottom="10dp"
                      android:layout_marginStart="15dp" android:textSize="16sp"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/direccion" android:id="@+id/txtDireccion"
                      android:textColor="@color/blackVariant" android:layout_marginBottom="10dp"
                      android:layout_marginStart="15dp" android:textSize="16sp"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/tel" android:id="@+id/txtTelefono"
                      android:textColor="@color/blackVariant" android:layout_marginBottom="10dp"
                      android:layout_marginStart="15dp" android:textSize="16sp"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/pago" android:id="@+id/txtPago"
                      android:textColor="@color/blackVariant" android:layout_marginBottom="10dp"
                      android:layout_marginStart="15dp" android:textSize="16sp"/>
            <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:text="@string/confirmar" android:backgroundTint="@color/yellowAlt"
                    android:textColor="@color/webGrey" android:layout_margin="25dp"
                    android:id="@+id/btnChoosePic" android:textSize="16sp"
                    android:visibility="invisible"/>
            <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:text="@string/confirmar" android:backgroundTint="@color/yellowAlt"
                    android:textColor="@color/webGrey" android:layout_margin="25dp"
                    android:id="@+id/btnConfirmar" android:textSize="16sp"
                    android:visibility="invisible"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>